# LinuxAppDev2021

./: .gitignore  README.md
03_Multifile/: Makefile  fun.c  prog.c
03_TerminalProject/: Makefile  Show.c
04_Text/: randomize.sh
05_Debugging/: Makefile  range.c  test1.gdb  test2.gdb
06_TracingFencing/: Makefile  move.c  protected_remove.c  test.txt
07_Environmental/: Makefile.am  README.md  configure.ac  md5.sh  rhasher.c  sha1.sh
07_Environmental/src/: rhasher.c
08_Regexps/: Makefile.am  README.md  configure.ac  esub.c  test1.sh  test2.sh  test3.sh  test4.sh
08_Regexps/src/: esub.c
09_Testing/: Makefile.am  README.md  configure.ac
09_Testing/src/: Makefile.am  libbuf.c
09_Testing/tests/: Makefile.am  upstream.ts
10_I18n/: Makefile.am  configure.ac  ru.po
10_I18n/po/: Makefile.am  ru.po
10_I18n/src/: Makefile.am  guess.c
11_Documenting/: Doxyfile.in  configure.ac
11_Documenting/po/: guess.pot  ru.po
11_Documenting/src/: Doc.md  Makefile.am  guess.c
